default/objects/Quote/fields/E2E_Data_Object__c.field-meta.xml
<CustomField>
    <fullName>E2E_Data_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>E2E Data Object</label>
    <referenceTo>E2E_Data_Object__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>