default/objects/Quote/fields/Vat__c.field-meta.xml
<CustomField>
    <fullName>Vat__c</fullName>
    <label>Vat</label>
    <summarizedField>QuoteLineItem.Copy_Vat__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>