default/objects/Quote/recordTypes/SHELL_Carnet_OBD.recordType-meta.xml
<RecordType>
    <fullName>SHELL_Carnet_OBD</fullName>
    <active>true</active>
    <label>SHELL / Carnet OBD</label>
</RecordType>